# agent-control-center

./: .gitignore  AGENTS.md  PROJECT.md  README.md  ROADMAP.md  agent-control-center.code-workspace  netlify.toml  package-lock.json  package.json
apps/api/: README.md  alembic.ini  constraints.txt  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_platform_foundation.py  0002_owner_sessions.py  0003_external_client_identity.py  0004_queue_foundation.py  0005_scheduler_foundation.py  0006_webhook_delivery_hardening.py  0007_observability_audit_baseline.py  (+11 more)
apps/api/tests/: test_agent_enrollment_credentials.py  test_agent_health_evaluator.py  test_agent_registry.py  test_agent_telemetry_ingestion.py  test_agent_visibility_owner_reads.py  test_agent_visibility_schema.py  test_approval_facts.py  test_approvals.py  test_authorization.py  test_config.py  test_connectors.py  test_contracts.py  test_dashboard_facade.py  test_external_client_auth.py  test_gmail_actions.py  test_gmail_approvals.py  test_gmail_drafts.py  test_gmail_knowledge.py  test_gmail_messages.py  test_gmail_mvp_candidate_closeout.py  test_gmail_operational.py  test_health_and_errors.py  test_knowledge_facts.py  test_knowledge_questions.py  test_migration_cutover.py  test_models_and_webhooks.py  test_observability_and_audit.py  test_owner_identity.py  test_owner_sessions.py  test_phase3_integration_closeout.py  test_phase5_integration_closeout.py  test_platform_events.py  test_queue.py  test_release_readiness.py  test_runs.py  test_scheduler.py  test_wo071_reference_clients.py
(+526 files in other folders)
