[project]
name = "atlas-api"
version = "0.1.0"
description = "FastAPI backend foundation for the Atlas Agent Control Center."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "PyJWT[crypto]>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
atlas-schedule-sweep = "atlas_api.cli.sweep_schedules:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src"]
